# haskell-template

./: .gitignore  .hlint.yaml  ChangeLog.md  LICENSE  README.md  cabal.project  hie.yaml  package.yaml  project.cabal  stack.yaml
.github/workflows/: cabal.yml  hlint.yml  stack.yml
exe/: Main.hs
src/: Lib.hs
