cabal-version:      3.0
name:               project
version:            0.1.0
synopsis:           Project
description:        Project Template
category:           Finance
homepage:           https://github.com/adjoint-io/haskell-template#readme
bug-reports:        https://github.com/adjoint-io/haskell-template/issues
maintainer:         Adjoint Inc (info@adjoint.io)
license:            BSD-3-Clause
license-file:       LICENSE
build-type:         Simple
extra-source-files:
  README.md
  ChangeLog.md

source-repository head
  type:     git
  location: https://github.com/adjoint-io/haskell-template

library
  exposed-modules:    Lib
  hs-source-dirs:     src
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings

  ghc-options:        -freverse-errors -Wall
  build-depends:
    , base       >=4.10 && <5
    , protolude  ^>=0.3

  default-language:   Haskell2010

executable project-exe
  main-is:            Main.hs
  hs-source-dirs:     exe
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings

  ghc-options:        -freverse-errors -Wall
  build-depends:
    , base       >=4.10 && <5
    , project
    , protolude  ^>=0.3

  default-language:   Haskell2010

test-suite project-tests
  type:               exitcode-stdio-1.0
  main-is:            Main.hs
  hs-source-dirs:     test
  default-extensions:
    NoImplicitPrelude
    LambdaCase
    OverloadedStrings

  ghc-options:        -freverse-errors -Wall
  build-depends:
    , base                  >=4.10 && <5
    , project
    , protolude             ^>=0.3
    , QuickCheck            >=2.12 && <2.14
    , quickcheck-instances  ^>=0.3
    , tasty                 ^>=1.2
    , tasty-discover        ^>=4.2
    , tasty-hunit           ^>=0.10
    , tasty-quickcheck      ^>=0.10

  default-language:   Haskell2010
